@@ -13,4 +13,4 @@ This will provide the interface from Mql to our Chart class in Python.
 
 string eSendOnSpeaker(string uChartId, string uType, string uMess, string uOriginCmd="");
 string eReturnOnSpeaker(string uChartId, string uType, string uMess, string uOriginCmd="");
-string eReturnOnListener(string uChartId, string uType, string uMess, string uOriginCmd="");
+string eReturnOnReqRep(string uChartId, string uType, string uMess, string uOriginCmd="");
